Do not use javax UriBuilder in PaxosRemotingUtils (#6972)